--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Todo List</title>
 </head>
 <body>
-    <h1>Todo List</h1>
+    
+  <h1> <%= kindOfDay %></h1>
+
+  <form action="/" method="post">
+      <input name="newTask" type="text">
+      <button type="submit" name="button">Create Task</button>
+  </form>
+
+  
 </body>
 </html>
