--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List</title>
-</head>
-<body>
-    
-  <h1> <%= kindOfDay %></h1>
+    <link rel="stylesheet" href="css/list.css" />
+  </head>
+  <body>
+    <div class="box" id="heading">
+      <h1><%= kindOfDay %></h1>
+    </div>
 
-  <form action="/" method="post">
-      <input name="newTask" type="text">
-      <button type="submit" name="button">Create Task</button>
-  </form>
+    <div class="box">
+      <% taskArr.map((el)=>{ %>
+      <div class="item">
+        <input type="checkbox" />
+        <p><%= el %></p>
+      </div>
+      <% }) %>
 
-  
-</body>
+      <form class="item" action="/" method="post">
+        <input name="newTask" type="text" placeholder="New Task" autocomplete="off"/>
+        <button type="submit" name="button">+</button>
+      </form>
+    </div>
+  </body>
 </html>
